html/css almost done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Disco Guess Game</title>
-        <link href="https://fonts.googleapis.com/css?family=Erica+One|Monoton" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Erica+One|Fredoka+One|Monoton" rel="stylesheet">
         <link href="assets/css/style.css" rel="stylesheet">
     </head>
     <body>
@@ -11,5 +11,13 @@
             <h1>Word Guess</h1>
             <h2>Disco style</h2>
         </header>
+        <div class="row">
+            <p><span id="track"></span></p>
+        </div>
+        <div class="row">
+            <div class="container">
+
+            </div>
+        </div>
     </body>
 </html>
