underscore function forrandom generator done

--- a/index.html
+++ b/index.html
@@ -16,8 +16,21 @@
         </div>
         <div class="row">
             <div class="container">
-
+                <div class="row">
+                    <!-- album cover -->
+                </div>
+                <div class="row">
+                    <!-- content -->
+                    <p>Guess which band I'm thinking of</p>
+                    <p>Wins: <span id="wins">0</span></p>
+                    <p>Losses: <span id="losses">0</span></p>
+                    <p>Current Word</p>
+                    <p id="word"></p>
+                    <p>Number of Guesses: <span id="tries">9</span></p>
+                    <p>Your Guesses so far: <span id="guesses"></span></p>
+                </div>
             </div>
         </div>
+        <script src="assets/javascript/game.js"></script>
     </body>
 </html>
