--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="container">
                 <div class="row">
                     <!-- album cover -->
+                    <img width="512" alt="ZMF 2015 IMGP 0000" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/ZMF_2015_IMGP_0000.jpg/512px-ZMF_2015_IMGP_0000.jpg">
                 </div>
                 <div class="row">
                     <!-- content -->
