added start condition

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
             <div class="container">
                 <div class="row">
                     <!-- album cover -->
-                    <img width="512" alt="ZMF 2015 IMGP 0000" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/ZMF_2015_IMGP_0000.jpg/512px-ZMF_2015_IMGP_0000.jpg">
+                    <img id="image" src="assets/images/disco-ball.jpg">
                 </div>
-                <div class="row">
+                <div id="parent" class="row">
                     <!-- content -->
+                    <p id="initial-text">Press any Key to get started!</p>
                     <p>Guess which band I'm thinking of</p>
                     <p>Wins: <span id="wins">0</span></p>
                     <p>Losses: <span id="losses">0</span></p>
